--- a/src/frontend/src/assets/scss/theme.scss
+++ b/src/frontend/src/assets/scss/theme.scss
@@ -1,6 +1,6 @@
 @import './fonts.scss';
-@import 'bootstrap/scss/functions';
-@import 'bootstrap/scss/variables';
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
 
 $primary: #e91b60;
 $secondary: #d81be9;
@@ -26,4 +26,4 @@ $theme-colors: (
   "dark": $dark
 );
 
-@import 'bootstrap/scss/bootstrap';
+@import '~bootstrap/scss/bootstrap';
